--- a/Letter_to_John_L.qmd
+++ b/Letter_to_John_L.qmd
@@ -5,26 +5,24 @@ format: pdf
 
 Subject: your post on priors
 
-https://www.linkedin.com/posts/johnalist_how-can-we-make-experimental-research-results-activity-7173682763768774657-IhH4/?utm_source=share&utm_medium=member_desktop
-
-
 Dear John, 
 
-I wanted to write with regards to your post on informative priors on twitter:
-https://www.linkedin.com/posts/johnalist_how-can-we-make-experimental-research-results-activity-7173682763768774657-IhH4/?utm_source=share&utm_medium=member_desktop
+I wanted to write with regards to [your post](https://www.linkedin.com/posts/johnalist_how-can-we-make-experimental-research-results-activity-7173682763768774657-IhH4/) on informative priors on Linkedin:
 
-You might know me a bit – I was Ken Leonard’s student and we now write together.  I remembered that you had attended my talk on income targeting experiment at LACEA/LAMES in Bogotá, and you recently accepted our gender paper w. Ken and Jeff Flory in your JEBO special issue (https://www.sciencedirect.com/science/article/pii/S0167268123003773). In particular, you encouraged us to apply your work on informed priors to our gender paper and it made it a much stronger paper. Thank you for that. 
 
-I wanted to write about what I think is another part of the story of power, which gets less attention, which is considering the underlying DGP. We had a paper (now, published https://www.sciencedirect.com/science/article/pii/S0304387824000166?via%3Dihub), which was doomed for the closet of null effects. 
+You might know me a bit – I was Ken Leonard’s student and we now write together.  I remembered that you had attended my talk on income targeting experiment at LACEA/LAMES in Bogotá, and you recently accepted [our gender paper](https://www.sciencedirect.com/science/article/pii/S0167268123003773) w. Ken and Jeff Flory in your JEBO special issue. In particular, you encouraged us to apply your work on informed priors to our gender paper and it made it a much stronger paper. Thank you for that. 
 
-But we looked at the underlying distributions of the data – fat tails, not conducive to taking averages. We tried a few different analyses – Bayesian hierarchal, weighted average quantiles (WAQ, Athey 2023), and vanilla quantiles and they told a different story from what average treatment effects were telling us, which by definition doesn’t accommodate fat tails.
+I wanted to write about what I think is another part of the story of power, which gets less attention, which has to do with the characteristics of the underlying distribution of the  outcome variables. To illustrate my point let me tell you about a field work of mine, [now published](https://www.sciencedirect.com/science/article/pii/S0304387824000166?via%3Dihub), which was doomed for the closet of null effects. Before we gave up on it, we looked at the underlying distributions of the outcome variables and discovered that they exhibited fat tails which mapped into a large estimate of the standard deviations of the outcome variables, and therefore to a large estimate of the standard deviation of the sample means of the outcome variables. We tried a few different analyses – Bayesian hierarchal, weighted average quantiles, WAQ, ([Athey 2023](https://academic.oup.com/jrsssb/article/85/5/1615/7226451)), and vanilla quantiles and they told a different story from what the imprecisely estimated average treatment effects were telling us.
 
-I think what was really telling about the process of that paper and the reviews that we received back was the reasoning what could generate large ATEs with large variances - heterogenous treatment effects could lead to be being unpowered. 
+::: {.callout-caution}
+I think what was really telling about the process of that paper, and the reviews that we received back then, was the reasoning what could generate large ATEs with large variances - heterogenous treatment effects could lead to be being unpowered. 
+
 
 Actually, you don’t need treatment effects to be heterogenous to generate large variances. That can be one cause, but isn’t necessary. Long tails that are imprecisely measured can also generate imprecisely measured averages, and the long tails (particularly if you can’t anticipate them) can make standard power requirements infeasible. Long tailed data are somewhat common with agricultural data, and I learned, with financial economic data too. 
+:::
 
-In the paper I ran some simulations that show that the sample sizes we would have needed to power the study were infeasible, in some cases potentially larger than the actual population being studied and just too expensive, but that didn’t mean there weren’t meaningful effects along the distribution. 
+In the paper we ran some simulations that show that the sample sizes we would have needed to power the study were infeasible, in some cases potentially larger than the actual population being studied and just too expensive, but that didn’t mean there weren’t meaningful effects along the distribution. 
 
 The nice ending to the paper is that the Bayesian and WAQ estimators largely told the same story - that there were non zero effects in the lower tails, but the upper tails were running things amuck. 
 
-Anyways, I thought I’d go out on a limb and share the paper since you are leading the way on forcing us all to think harder about null results, and, well, not to banish them to the closet of null results.
+Anyways, I thought I’d go out on a limb and share the paper since you are leading the way on forcing us all to think harder about null results, and, well, not to banish them to the closet of null results. I am in the process of writing a methodological piece about this with another coauthor that could help anyone, but especially those potentially facing null results in their field work, navigate how to better clarify the relationship between fat tails, power, and heterogeneous treatment effects.
