Cleaned the ending

--- a/Letter_to_John_L.qmd
+++ b/Letter_to_John_L.qmd
@@ -25,4 +25,4 @@ In the paper we ran some simulations that show that the sample sizes we would ha
 
 The nice ending to the paper is that the Bayesian and WAQ estimators largely told the same story - that there were non zero effects in the lower tails, but the upper tails were running things amuck. 
 
-Anyways, I thought I’d go out on a limb and share the paper since you are leading the way on forcing us all to think harder about null results, and, well, not to banish them to the closet of null results. I am in the process of writing a methodological piece about this with another coauthor that could help anyone, but especially those potentially facing null results in their field work, navigate how to better clarify the relationship between fat tails, power, and heterogeneous treatment effects.
+Anyways, I thought I’d go out on a limb and share the paper since you are leading the way on forcing us all to think harder about null results, and, well, not to banish them to the closet of null results. I am in the process of writing a methodological piece about this with another coauthor that could help anyone, but especially those potentially facing null results in their field work, navigate the intricate relationship between fat tails, power, and heterogeneous treatment effects.
