--- a/Letter_to_John_L.qmd
+++ b/Letter_to_John_L.qmd
@@ -11,17 +11,15 @@ I wanted to write with regards to [your post](https://www.linkedin.com/posts/joh
 
 You might know me a bit – I was Ken Leonard’s student and we now write together.  I remembered that you had attended my talk on income targeting experiment at LACEA/LAMES in Bogotá, and you recently accepted [our gender paper](https://www.sciencedirect.com/science/article/pii/S0167268123003773) w. Ken and Jeff Flory in your JEBO special issue. In particular, you encouraged us to apply your work on informed priors to our gender paper and it made it a much stronger paper. Thank you for that. 
 
-I wanted to write about what I think is another part of the story of power, which gets less attention, which has to do with the characteristics of the underlying distribution of the  outcome variables. To illustrate my point let me tell you about a field work of mine, [now published](https://www.sciencedirect.com/science/article/pii/S0304387824000166?via%3Dihub), which was doomed for the closet of null effects. Before we gave up on it, we looked at the underlying distributions of the outcome variables and discovered that they exhibited fat tails which mapped into a large estimate of the standard deviations of the outcome variables, and therefore to a large estimate of the standard deviation of the sample means of the outcome variables. We tried a few different analyses – Bayesian hierarchal, weighted average quantiles, WAQ, ([Athey 2023](https://academic.oup.com/jrsssb/article/85/5/1615/7226451)), and vanilla quantiles and they told a different story from what the imprecisely estimated average treatment effects were telling us.
-
-::: {.callout-caution}
-I think what was really telling about the process of that paper, and the reviews that we received back then, was the reasoning what could generate large ATEs with large variances - heterogenous treatment effects could lead to be being unpowered. 
+I wanted to write about what I think is another part of the story of power, which gets less attention, which has to do with the characteristics of the underlying distribution of the  outcome variables. To illustrate my point let me tell you about a field work of mine, [now published](https://www.sciencedirect.com/science/article/pii/S0304387824000166?via%3Dihub), which was doomed for the closet of null effects. Before we gave up on it, we looked at the underlying distributions of the outcome variables and discovered that they exhibited fat tails, which mapped into a large estimate of the variance of the outcome variables, and therefore to a large estimate of the standard error of the sample means of the outcome variables. We tried a few different analyses – Bayesian hierarchal, weighted average quantiles, WAQ, ([Athey 2023](https://academic.oup.com/jrsssb/article/85/5/1615/7226451)), and vanilla quantiles and they told a different story from what the imprecisely estimated average treatment effects were telling us.
 
 
-Actually, you don’t need treatment effects to be heterogenous to generate large variances. That can be one cause, but isn’t necessary. Long tails that are imprecisely measured can also generate imprecisely measured averages, and the long tails (particularly if you can’t anticipate them) can make standard power requirements infeasible. Long tailed data are somewhat common with agricultural data, and I learned, with financial economic data too. 
-:::
+I think that what was really telling about the editorial process of that paper was that the reviewers believed that heterogenous treatment effects could be what was generating estimators of the ATEs with large variances.
 
-In the paper we ran some simulations that show that the sample sizes we would have needed to power the study were infeasible, in some cases potentially larger than the actual population being studied and just too expensive, but that didn’t mean there weren’t meaningful effects along the distribution. 
+Actually, you don’t need treatment effects to be heterogenous to generate large variances of the ATE. That can be one cause, but isn’t necessary. Long tails can also generate imprecisely estimated treatment effects. 
 
-The nice ending to the paper is that the Bayesian and WAQ estimators largely told the same story - that there were non zero effects in the lower tails, but the upper tails were running things amuck. 
+Further, long tails can make standard power requirements infeasible. Long tailed data are somewhat common with agricultural data, and I learned, with financial economic data too.  In the paper we ran some simulations that show that the sample sizes we would have needed to power the study were infeasible, in some cases potentially larger than the actual population being studied and just too expensive, but that didn’t mean there weren’t meaningful effects along the distribution.
 
-Anyways, I thought I’d go out on a limb and share the paper since you are leading the way on forcing us all to think harder about null results, and, well, not to banish them to the closet of null results. I am in the process of writing a methodological piece about this with another coauthor that could help anyone, but especially those potentially facing null results in their field work, navigate the intricate relationship between fat tails, power, and heterogeneous treatment effects.
+The nice ending to the paper is that the Bayesian and WAQ estimators largely told the same story - that there were non zero effects in the lower tails, but the upper tails were running things amuck. I think this is connects with your work on informed priors in important ways, since many of the results we are currently calling 'Null' may actually not be so, when looked at by using other tools.
+
+Anyways, I thought I’d go out on a limb and share the paper since you are leading the way on forcing us all to think harder about null results, and, well, not to banish them to the closet of null results. I am in the process of writing a methodological piece about this with my colleague Eduardo Zambrano that could help anyone, but especially those potentially facing null results in their field work, navigate the intricate relationship between fat tails, power, and heterogeneous treatment effects.
