--- a/Letter_to_John_L.qmd
+++ b/Letter_to_John_L.qmd
@@ -1,25 +1,23 @@
 ---
-title: "Letter to John"
+# title: "Letter to John"
 format: pdf
----
 
-Subject: your post on priors
+---
+<!-- 
+# Subject: your post on priors -->
 
 Dear John, 
 
-I wanted to write with regards to [your post](https://www.linkedin.com/posts/johnalist_how-can-we-make-experimental-research-results-activity-7173682763768774657-IhH4/) on informative priors on Linkedin:
+I wanted to write with regards to [your post](https://www.linkedin.com/posts/johnalist_how-can-we-make-experimental-research-results-activity-7173682763768774657-IhH4/) on informative priors on Linkedin.
 
-You might know me a bit – I was Ken Leonard’s student and we now write together.  I remembered that you had attended my talk on income targeting experiment at LACEA/LAMES in Bogotá, and you recently accepted [our gender paper](https://www.sciencedirect.com/science/article/pii/S0167268123003773) w. Ken and Jeff Flory in your JEBO special issue. In particular, you encouraged us to apply your work on informed priors to our gender paper and it made it a much stronger paper. Thank you for that. 
+You might know me a bit – I was Ken Leonard’s student and we now write together.  I remembered that you had attended my talk on income targeting experiment at LACEA/LAMES in Bogotá, and you recently accepted [our gender paper](https://www.sciencedirect.com/science/article/pii/S0167268123003773) with Ken and Jeff Flory in your JEBO special issue. In particular, you encouraged us to apply your work on informed priors to our gender paper and it made it a much stronger paper. Thank you for that. 
 
-I wanted to write about what I think is another part of the story of power, which gets less attention, which has to do with the characteristics of the underlying distribution of the  outcome variables. To illustrate my point let me tell you about a field work of mine, [now published](https://www.sciencedirect.com/science/article/pii/S0304387824000166?via%3Dihub), which was doomed for the closet of null effects. Before we gave up on it, we looked at the underlying distributions of the outcome variables and discovered that they exhibited fat tails, which mapped into a large estimate of the variance of the outcome variables, and therefore to a large estimate of the standard error of the sample means of the outcome variables. We tried a few different analyses – Bayesian hierarchal, weighted average quantiles, WAQ, ([Athey 2023](https://academic.oup.com/jrsssb/article/85/5/1615/7226451)), and vanilla quantiles and they told a different story from what the imprecisely estimated average treatment effects were telling us.
+I wanted to write about what I think is another part of the story of power, which gets less attention, which has to do with the characteristics of the underlying distribution of the  outcome variables. To illustrate my point let me tell you about a field work of mine, [now published](https://www.sciencedirect.com/science/article/pii/S0304387824000166?via%3Dihub), which was doomed for the closet of null effects. Before we gave up on it, we looked at the underlying distributions of the outcome variables and discovered that they exhibited fat tails, which mapped into a large estimate of the variance of the outcome variables, and therefore to a large estimate of the standard error of the sample means of the outcome variables. We tried a few different analyses – Bayesian hierarchal, weighted average quantiles, WAQs, ([Athey 2023](https://academic.oup.com/jrsssb/article/85/5/1615/7226451)), and vanilla quantiles and they told a different story from what the imprecisely estimated average treatment effects were telling us.
 
-
-I think that what was really telling about the editorial process of that paper was that the reviewers believed that heterogenous treatment effects could be what was generating estimators of the ATEs with large variances.
-
-Actually, you don’t need treatment effects to be heterogenous to generate large variances of the ATE. That can be one cause, but isn’t necessary. Long tails can also generate imprecisely estimated treatment effects. 
+Our reviewers believed that heterogenous treatment effects were the likely drivers of the imprecise ATE estimates. Our response was that, in part, you don’t need treatment effects to be heterogenous to generate large variances of the ATE estimator. That can be one cause, but not the only cause. Long tails can also generate imprecisely estimated treatment effects. 
 
 Further, long tails can make standard power requirements infeasible. Long tailed data are somewhat common with agricultural data, and I learned, with financial economic data too.  In the paper we ran some simulations that show that the sample sizes we would have needed to power the study were infeasible, in some cases potentially larger than the actual population being studied and just too expensive, but that didn’t mean there weren’t meaningful effects along the distribution.
 
-The nice ending to the paper is that the Bayesian and WAQ estimators largely told the same story - that there were non zero effects in the lower tails, but the upper tails were running things amuck. I think this is connects with your work on informed priors in important ways, since many of the results we are currently calling 'Null' may actually not be so, when looked at by using other tools.
+The nice ending to the paper is that the Bayesian and WAQ estimators largely told the same story - that there were non zero effects in the lower tails, but the upper tails were running things amuck. I think this connects with your work on informed priors in important ways, since many of the results we are currently calling 'Null' may not actually be so, when looked at more carefully using other tools.
 
-Anyways, I thought I’d go out on a limb and share the paper since you are leading the way on forcing us all to think harder about null results, and, well, not to banish them to the closet of null results. I am in the process of writing a methodological piece about this with my colleague Eduardo Zambrano that could help anyone, but especially those potentially facing null results in their field work, navigate the intricate relationship between fat tails, power, and heterogeneous treatment effects.
+Anyways, I thought I’d go out on a limb and share the paper since you are leading the way on forcing us all to think harder about null results. I am in the process of writing a methodological piece about this with my colleague Eduardo Zambrano (also at Cal Poly) that could help anyone, but especially those potentially facing null results in their field work, navigate the intricate relationship between fat tails, power, and heterogeneous treatment effects.
